--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build --no-source-maps index.html --public-url ./"
+    "build": "parcel build --no-optimize --no-source-maps index.html --public-url ./"
   },
   "keywords": [],
   "author": "Aryan Sawhney & Alex Qwxlea",
   "license": "MIT",
   "dependencies": {
-    "@logseq/libs": "^0.0.14",
+    "@iarna/toml": "^2.2.5",
     "file-saver": "^2.0.5",
     "jszip": "^3.8.0",
     "postcss": "^8.4.12",
@@ -28,13 +28,17 @@
     "icon": "./icon.png"
   },
   "devDependencies": {
+    "@logseq/libs": "^0.0.14",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "autoprefix": "^1.0.1",
     "autoprefixer": "^10.4.2",
     "buffer": "^6.0.3",
+    "events": "^3.1.0",
     "parcel": "^2.0.0",
     "postcss-cli": "^9.1.0",
-    "postcss-import": "^14.0.2"
+    "postcss-import": "^14.0.2",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0"
   }
 }
